font ttf to woff

--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
 
 }
 
+@font-face {
+    font-family: buttermilk;
+    src: url(Buttermilk.woff);
+}
+
 body {
     display: flex;
     justify-content: center;
